# raclettui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  flake.nix
examples/: cpu_ratatui.rs  hello.rs  test.rs  wgpu_ratatui.rs
src/: builder.rs  colors.rs  error.rs  events.rs  lib.rs  ratatui_backend.rs  utils.rs  wayland_state.rs  window.rs
src/cpu/: backend.rs  buffer.rs  mod.rs  wayland.rs  window.rs
src/wgpu/: backend.rs  mod.rs  render.rs  shaders.wgsl  utils.rs  wayland.rs  window.rs
