[package]
name = "raclettui"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.32"
bytemuck = "1.25.0"
fontdb = "0.23.0"
fontdue = "0.9.3"
khronos-egl = { version = "6.0.0", features = ["static"] }
pollster = "0.4.0"
ratatui-core = "0.1.0"
raw-window-handle = "0.6.2"
tempfile = "3.26.0"
wayland-backend = { version = "0.3.12", features = ["client_system", "raw-window-handle"] }
wayland-client = "0.31.12"
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
wgpu = { version = "28.0.0", features = ["vulkan"] }
xkbcommon = "0.9.0"

[dev-dependencies]
ratatui = "0.30.0"
