[package]
name = "raclettui"
version = "0.1.0"
edition = "2024"
description = "Build terminal-themed wayland layer shell applications with Rust."
license = "MIT"
repository = "https://github.com/ishrut/raclettui"
homepage = "https://github.com/ishrut/raclettui"
documentation = "https://docs.rs/raclettui"
readme = "README.md"
keywords = ["layershell", "ratatui", "wayland", "tui", "gui"]
categories = ["graphics", "rendering", "gui"]
authors = ["Ishrut"]

[dependencies]
ab_glyph = "0.2.32"
bytemuck = "1.25.0"
fontdb = "0.23.0"
fontdue = "0.9.3"
glyphon = "0.10.0"
khronos-egl = { version = "6.0.0", features = ["static"] }
pollster = "0.4.0"
ratatui-core = "0.1.0"
raw-window-handle = "0.6.2"
tempfile = "3.26.0"
wayland-backend = { version = "0.3.12", features = ["client_system", "raw-window-handle"] }
wayland-client = "0.31.12"
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
wgpu = { version = "28.0.0", features = ["vulkan"] }
xkbcommon = "0.9.0"

[dev-dependencies]
ratatui = "0.30.0"
