[package]
name = "raclettui"
version = "0.2.0"
edition = "2024"
description = "Build terminal-themed wayland layer shell applications with Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ishrut/raclettui"
homepage = "https://github.com/ishrut/raclettui"
documentation = "https://docs.rs/raclettui"
readme = "README.md"
keywords = ["layershell", "ratatui", "wayland", "tui", "gui"]
categories = ["graphics", "rendering", "gui"]
authors = ["Ishrut"]

[dependencies]
beamterm-core = "1.0.0"
env_logger = "0.11.9"
glow = "0.17.0"
glutin = "0.32.3"
ratatui-core = "0.1.0"
raw-window-handle = "0.6.2"
wayland-backend = { version = "0.3.12", features = ["client_system", "raw-window-handle"] }
wayland-client = "0.31.12"
wayland-egl = "0.32.11"
wayland-protocols-wlr = { version = "0.3.10", features = ["client"] }
tempfile = "3.26.0"
xkbcommon = "0.9.0"

[dev-dependencies]
ratatui = "0.30.0"
